Add Dynatrace DQL query definitions
Added Dynatrace DQL query definitions for logs and Kubernetes deployments.

--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -5,7 +5,19 @@ metadata:
   description: Online Bookstores web application
   annotations:
     github.com/project-slug: Purvash-143/onlinebookstores
+    dynatrace.com/dql-query-definition: |
+      {
+        "dynatrace.logs": {
+          "displayName": "Laptop Logs",
+          "dql": "fetch logs | filter contains(content, \"\") | limit 50"
+        },
+        "dynatrace.kubernetes-deployments": {
+          "displayName": "Kubernetes Deployments",
+          "dql": "fetch kubernetes_deployment | fields name, namespace, replicas, created | limit 20"
+        }
+      }
 spec:
   type: service
   owner: Purvash-143
   lifecycle: unknown
+
