--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -9,6 +9,7 @@ metadata:
         "logs": {
           "displayName": "Laptop Logs",
           "dql": "fetch logs | limit 50"
+          "queryId": "dynatrace.logs"
         }
       }
 spec:
